--- a/1. Getting started/reactive-webapp/pom.xml
+++ b/1. Getting started/reactive-webapp/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>reactive-webapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>reactive-webapp</name>
+	<name>Getting started</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
